--- a/src/components/todos/TodoIndex.scss
+++ b/src/components/todos/TodoIndex.scss
@@ -1,6 +1,5 @@
 .todo-index-container {
-    min-width: 600px;
-    min-height: 500px;
-    background-color: tan;
+    width: 50%;
+    background-color: rgb(165, 215, 160);
     color: black;
 }
