--- a/src/components/carousel/styles/Carousel.scss
+++ b/src/components/carousel/styles/Carousel.scss
@@ -1,6 +1,56 @@
+.slider-container {
+    display: grid;
+    height: 100vh;
+    place-items: center;
+}
 
-.image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.slider {
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    width: 100%;
+    max-width: 300px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+.slide {
+    width: 100%;
+    max-width: 100px;
+    position: absolute;
+    transition: all 0.5s;
+     
+    img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
+.btn {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+    border: none;
+    border-radius: 50%;
+    z-index: 10;
+    cursor: pointer;
+    background-color: #fff;
+    font-size: 16px;
+
+    &:active {
+        transform: scale(1.1);
+    }
+}
+
+.btn-prev {
+    top: 45%;
+    left: 2%;
+}
+
+.btn-next {
+    top: 45%;
+    right: 2%;
 }
