added dependency of teams to useEffect for currTeamIdx so currTeamPicking isn't undefined on initial render

--- a/src/components/mock_draft/DraftQueue.scss
+++ b/src/components/mock_draft/DraftQueue.scss
@@ -1,4 +1,9 @@
 .queue-wrapper {
     display: flex;
     flex-direction: column;
+    width: 15%;
+    height: 100vh;
+    border: 2px solid gold;
+
+    
 }
