--- a/src/components/mock_draft/DraftApp.scss
+++ b/src/components/mock_draft/DraftApp.scss
@@ -7,7 +7,7 @@
     width: 15%;
 }
 
-.form-container {
+.draft-details-container {
     width: 85%;
     display: flex;
     flex-direction: column;
