queue item styling

--- a/src/components/mock_draft/QueueItem.scss
+++ b/src/components/mock_draft/QueueItem.scss
@@ -1,4 +1,8 @@
 .item-wrapper {
     display: flex;
-    
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    font-weight: bold;
+     
 }
