--- a/src/components/mock_draft/DraftApp.scss
+++ b/src/components/mock_draft/DraftApp.scss
@@ -11,6 +11,7 @@
     width: 85%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    margin-top: 2rem;
 }
