--- a/src/components/mock_draft/DraftApp.scss
+++ b/src/components/mock_draft/DraftApp.scss
@@ -13,5 +13,14 @@
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    margin-top: 2rem;
+    margin: 2rem 0;
+}
+
+.pick-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
